--- a/css/style.css
+++ b/css/style.css
@@ -130,6 +130,25 @@ main section.menu header .create i {
   color: white;
 }
 
+main section.menu .members::-webkit-scrollbar {
+  width: 7px;
+}
+
+main section.menu .members::-webkit-scrollbar-thumb {
+  background-color: var(--background-color-gry);
+  border-radius: 30px;
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  -ms-border-radius: 30px;
+  -o-border-radius: 30px;
+}
+
+
+main section.menu .members {
+  max-height: 555px;
+  overflow-y: auto;
+}
+
 main section.menu .members ul li.member {
   display: flex;
   justify-content: space-between;
@@ -263,11 +282,21 @@ main>.container .chat .chat-page span.date::before {
   left: 0px;
 }
 
+main>.container .chat .chat-page .messages::-webkit-scrollbar {
+  display: none;
+}
+
 main>.container .chat .chat-page .messages {
   padding: 10px 10px 30px;
   width: 100%;
+  max-height: 514px;
+  overflow-y: auto;
   display: flex;
   flex-direction: column;
+}
+
+.clear {
+  clear: both;
 }
 
 main>.container .chat .chat-page .messages p {
@@ -322,6 +351,7 @@ main>.container .chat .chat-page form.send {
   background-color: var(--background-color-gry);
   width: 100%;
   height: 50px;
+  margin-top: 20px;
   padding-inline: 10px;
   border-radius: 5px;
   -webkit-border-radius: 5px;
