--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,6 @@ html {
   scroll-behavior: smooth;
 }
 
-
 body {
   background-image: url("https://images.pexels.com/photos/313782/pexels-photo-313782.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
   background-size: cover;
@@ -88,18 +87,19 @@ main>.container .chat {
 
 main section.menu header {
   width: 100%;
-  height: 130px;
+  height: 110px;
   padding-inline: 40px;
   display: flex;
   align-items: center;
   justify-content: flex-start;
+  position: relative;
 }
 
 main section.menu header form {
   flex: 3;
 }
 
-main section.menu header form input {
+main section.menu header form input[name="search"] {
   width: 100%;
   height: 50px;
   border-radius: 50px;
@@ -130,6 +130,85 @@ main section.menu header .create i {
   color: white;
 }
 
+/* ======================================== */
+
+.add-name {
+  display: none;
+  width: calc(100% - 20px);
+  background-color: rgb(238, 238, 238);
+  border-radius: 10px;
+  padding: 20px 15px;
+  transition: 0.3s ease-in-out;
+  position: absolute;
+  top: 100%;
+  left: 10px;
+  z-index: 99;
+
+}
+
+.add-name h3 {
+  font-size: 16px;
+}
+
+.add-name .input-add {
+  margin-top: 15px;
+  width: 100%;
+  border-radius: 6px;
+}
+
+.add-name .add {
+  background-color: #fff;
+  padding: 5px 10px;
+  border-radius: 6px;
+}
+
+.add-name .input-add span {
+  font-weight: bold;
+}
+
+.add-name .input-add input[name="addName"] {
+  outline: none;
+  border: none;
+  max-width: 100%;
+  padding: 10px;
+}
+
+textarea {
+  width: 100%;
+  resize: none;
+  padding: 10px;
+  margin-top: 20px;
+  outline: none;
+  border: none;
+}
+
+.add-name form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff !important;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: 2px solid var(--background-color-active);
+  margin: 10px auto 0;
+}
+
+.add-name form i:hover {
+  color: var(--background-color-active) !important;
+}
+
+.add-name form input[type="file"] {
+  display: none;
+}
+
+.add-name button {
+  outline: none;
+  border: none;
+  background-color: transparent;
+}
+
+/* ======================================== */
 main section.menu .members::-webkit-scrollbar {
   width: 7px;
 }
@@ -146,7 +225,7 @@ main section.menu .members::-webkit-scrollbar-thumb {
 
 main section.menu .members {
   max-height: 555px;
-  max-height: calc(100vh - 200px);
+  max-height: calc(100vh - 180px);
   overflow-y: auto;
 }
 
@@ -156,14 +235,15 @@ main section.menu .members ul li.member {
   align-items: flex-start;
   height: 76px;
   width: 100%;
-  padding: 15px 40px;
+  padding: 15px 30px;
   position: relative;
+  cursor: pointer;
 }
 
 main section.menu .members ul li.member::before {
   content: '';
   background-color: var(--background-color-gry);
-  width: calc(100% - 100px);
+  width: calc(100% - 60px);
   height: 1px;
   position: absolute;
   top: 0;
@@ -180,9 +260,10 @@ main section.menu .members ul li.member img {
   -o-border-radius: 50%;
 }
 
-main section.menu .members ul li.member .name {
+main section.menu .members ul li.member .content {
   height: 100%;
   width: 75%;
+  overflow: hidden;
   display: grid;
   row-gap: 3px;
   grid-template-columns: repeat(4, 1fr);
@@ -205,17 +286,35 @@ main section.menu .members ul li.member p {
   font-size: 14px;
   color: var(--color-text);
   grid-area: message;
-  width: 90%;
+  /* width: 90%; */
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+}
 
+main section.menu .members ul li.member:hover p {
+  animation: slide 7s infinite 0.5s linear;
+}
+
+@keyframes slide {
+  to {
+    margin-left: -100%;
+  }
 }
 
 main section.menu .members ul li.member span {
-  width: 55px;
+  width: 60px;
   font-size: 14px;
   grid-area: date;
+}
+
+main section.menu .members ul li.member:hover:not(.active) {
+  background-color: #04b1f61f;
+  box-shadow: 0px 2px 0 0px var(--background-color-gry);
+}
+
+main section.menu .members ul li.member:hover::before {
+  display: none;
 }
 
 .active {
@@ -226,9 +325,8 @@ main section.menu .members ul li.member.active::before {
   display: none;
 }
 
-.active h3,
-.active p,
-.active span {
+.active,
+.active p {
   color: var(--background-color-body) !important;
 }
 
@@ -293,6 +391,7 @@ main>.container .chat .chat-page .messages {
   max-height: 514px;
   max-height: calc(100vh - 240px);
   overflow-y: auto;
+  overflow-x: hidden;
   display: flex;
   flex-direction: column;
 }
@@ -303,7 +402,9 @@ main>.container .chat .chat-page .messages {
 
 main>.container .chat .chat-page .messages p {
   width: fit-content;
+  max-width: 60%;
   padding: 16px 20px;
+  word-break: break-word;
   margin-block: 5px;
   border-radius: 5px;
   -webkit-border-radius: 5px;
